# blog

./: .gitignore  LICENSE  Makefile  README.md  blog-towrite.txt  blog.cabal  package-lock.json  package.json  tailwind.config.js
_posts/: test1.md  test2.md
_projects/: encrypted-tao.md  orlang.md  rlcycle.md  session-pi.md  sslang-pm.md
app/: Main.hs
src/: Generate.hs  HtmlHead.hs  Markdown.hs  MyLib.hs  Navbar.hs  Page.hs  Server.hs  Style.hs
src/Blog/: Generate.hs  HtmlHead.hs  Markdown.hs  Navbar.hs  Page.hs  Server.hs  Style.hs
src/blog/: BlogGallery.tsx
src/content/: Content.tsx
src/layout/: Meta.tsx
src/navigation/: Navbar.tsx
src/pages/: blog.tsx  index.tsx  projects.tsx  resume.tsx
src/pages/posts/: [slug].tsx
src/project/: ProjectGallery.tsx
src/templates/: Main.tsx
src/utils/: AppConfig.ts  ProjectContent.ts
static/pages/: blog.md  home.md  resume.md
static/pages/blog-posts/: Everything-I-know-about-Paxos.md  coq-proof.md  paxos.md  reading-list.md
